tests/when-mismatched-types.stderr
error: 
  ┌─ test:3:12
  │
3 │   False -> "hi"
  │            ^^^^ expected `Number`, but found `Text`
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

